# HapticBallLabyrinth

./: .gitignore  CMakeLists.txt  HapkitCalibration.txt  Project_Proposal_Schoepf_Spiss.tex  README.md
BallLabyrinth/: .clang-format  .ycm_extra_conf.py  CMakeLists.txt  Camera.cpp  GLMain.cpp  GraphicsModel.cpp  HandleInterface.cpp  MaterialManager.cpp  Model.cpp  Physics.cpp  PointLight.cpp  Scene.cpp  SerialCommunication.cpp  Shader.cpp  ShaderProgram.cpp  main.cpp  testMain.cpp  tiny_obj_loader.cpp
BallLabyrinth/Maze_generation/: convert_stl_to_blend.py  generateobjmaze  maze.py  walloutput.txt
BallLabyrinth/Maze_generation/generated_output/: walloutput10.txt  walloutput2.txt  walloutput5.txt
BallLabyrinth/doc/: Doxyfile
BallLabyrinth/include/: Camera.hpp  GLMain.hpp  GraphicsModel.hpp  HandleInterface.hpp  HapticForceManager.hpp  MaterialManager.hpp  Model.hpp  Physics.hpp  PointLight.hpp  Scene.hpp  SerialCommunication.hpp  Shader.hpp  ShaderProgram.hpp  SimpleSerial.hpp  SimpleSerialBoost.hpp
BallLabyrinth/scenes/: Ball.mtl  LabyrinthandBallblend.mtl  maze1.mtl  walloutput.txt
BallLabyrinth/scenes/labyrinths/: walloutput1.txt  walloutput10.txt  walloutput2.txt  walloutput3.txt  walloutput4.txt  walloutput5.txt  walloutput6.txt  walloutput7.txt  walloutput8.txt  walloutput9.txt
BallLabyrinth/shaders/: defaultFs.glsl  fragmentShader.glsl  vertexShader.glsl
BallLabyrinthHandles/handle/: handle.ino
documentation/: Physcal_based_simulation_Schoepf_Spiss.tex  biblio_physical_based_simulation.bib
documentation/BallLabyrinth/: Final Project Presentation.odp
documentation/HapticDoc/: projectProposal.md  report.md  report.tex  slides.md
documentation/HapticDoc/Client/client/: client.ino
